# curator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_BRIEF.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  acpRender.test.ts  acpRender.ts  agents.ts  api.ts  main.tsx  shell.css  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: gen-placeholder-icons.mjs
apps/desktop/src-tauri/src/: acp_paths.rs  lib.rs  main.rs
apps/desktop/src/components/: AgentPicker.tsx  ApproveToolsModal.tsx  ArtifactList.tsx  ArtifactRunPanel.tsx  ConfirmDirtyDialog.tsx  ContextPreview.tsx  Dashboard.tsx  Diagnostics.tsx  DraftsList.tsx  EditorPanel.tsx  EditorTabs.tsx  EmptyVaultFresh.tsx  EmptyVaultNoProjects.tsx  ExternalRunnerPromptCard.tsx  FileTree.tsx  FrontmatterForm.tsx  HistoryPanel.tsx  NewFileDialog.tsx  PermissionRequestCard.tsx  ProjectDetail.tsx  ProjectList.tsx  RecommendationsBell.tsx  RunPanel.tsx  RunPanelHost.tsx  SecurityPanel.tsx  Sidebar.tsx  SourceControlPanel.tsx  SourceRepositorySection.tsx  StatusBar.tsx  TitleBar.tsx  Tooltip.tsx  Welcome.tsx  ZoneList.tsx
apps/desktop/src/components/shell/: AgentConversation.tsx  LeftPanel.tsx  PanelCve.tsx  PanelGit.tsx  Rail.tsx  ShellFiles.tsx  ShellIcon.tsx  ShellPalette.tsx  ShellStatusBar.tsx  ShellTitleBar.tsx  chatFormat.ts  types.ts  useDragWidth.ts
apps/desktop/src/hooks/: usePopoverPosition.ts  useRecommendations.ts
apps/desktop/src/utils/: frontmatter.ts  path.ts
crates/vault-core/: Cargo.toml
crates/vault-core/examples/: inspect.rs  preview.rs  runner_prompt.rs  scan_path.rs
crates/vault-core/src/: bootstrap.rs  config.rs  frontmatter.rs  git.rs  lib.rs  markdown_io.rs  recommendations.rs  scan.rs  scope.rs  search.rs  source_repo.rs  types.rs  util.rs  watch.rs
crates/vault-core/src/artifacts/: discovery.rs  mod.rs  parsers.rs
crates/vault-core/src/cve/: mod.rs  osv.rs
crates/vault-core/src/cve/parsers/: mod.rs  package_lock.rs  yarn_lock.rs
crates/vault-core/src/db/: dismissed.rs  migration.rs  mod.rs  recents.rs  sessions.rs
crates/vault-core/src/preview/: mod.rs  runner_prompt.rs
crates/vault-core/src/runner/: claude.rs  codex.rs  mod.rs  subprocess.rs
crates/vault-core/src/runner/acp/: claude.rs  codex.rs  mod.rs  transport.rs  workflow_watch.rs
crates/vault-core/src/templates/: AGENTS.md  config.yml  project_index.md
crates/vault-core/tests/: markdown_file.rs  preview_context.rs  scan_demo_vault.rs  scan_vault_skill_fixture.rs
crates/vault-core/tests/fixtures/vault-skill/: README.md
crates/vault-core/tests/fixtures/vault-skill/.vault/skills/: intake.skill.md
docs/: architecture.md  multi-chat.md  shell.md
examples/demo-vault/: README.md
examples/demo-vault/.vault/: config.yml
examples/demo-vault/00_meta/: ABOUT_ME.md  AGENTS.md  README.md
examples/demo-vault/00_meta/_claude/: README.md
examples/demo-vault/00_meta/_claude/agents/: example-agent.md
examples/demo-vault/00_meta/_claude/commands/: example-command.md
examples/demo-vault/00_meta/_claude/rules/: example-rule.md
examples/demo-vault/00_meta/_claude/skills/example/: SKILL.md
examples/demo-vault/00_meta/_claude/skills/session-reflect/: SKILL.md
examples/demo-vault/00_meta/agent-tasks/: README.md
examples/demo-vault/00_meta/agent-tasks/prompts/: 01-domain.md  02-architecture.md  04-threat-model.md
examples/demo-vault/01_inbox/: idea-2026-05-17.md
examples/demo-vault/01_inbox/_drafts/: sample-reentrancy-pattern.md
examples/demo-vault/02_projects/empty-project/: _index.md
examples/demo-vault/02_projects/no-index-project/: notes.md
examples/demo-vault/02_projects/sample-project/: 01_intake.md  02_plan.md  _index.md  private-decision-2026-05-17.md
examples/demo-vault/02_projects/sample-project/journal/: 2026-05-17.md
examples/demo-vault/02_projects/sample-project/research/: 2026-05-old-notes.md.bak
examples/demo-vault/03_areas/people/: alex-demo.md
examples/demo-vault/03_areas/team/: weekly-sync.md
examples/demo-vault/04_resources/: defi-frontend-patterns.md
examples/demo-vault/05_archive/: 2025-old-experiment.md
examples/demo-vault/06_daily/: 2026-05-17.md
scripts/: fetch-acp-binaries.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/: consts.ts  content.config.ts
site/src/components/: BrandMark.astro  Footer.astro  HeroVisual.astro  Nav.astro
site/src/content/docs/: architecture.md  privacy.md  quick-start.md
site/src/layouts/: Base.astro  Docs.astro
site/src/pages/: index.astro
site/src/pages/docs/: [...slug].astro
site/src/styles/: global.css
