[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vault scanning and parsing for Vault Workflow IDE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
walkdir = "2"
thiserror = "2"
notify = "8"
notify-debouncer-full = "0.7"
