[package]
name = "vault-workflow-ide"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vault Workflow IDE — desktop shell"

[lib]
name = "vault_workflow_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vault-core = { path = "../../../crates/vault-core" }
