[package]
name = "curator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Curator — desktop shell"

[lib]
name = "curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vault-core = { path = "../../../crates/vault-core" }
